# game-engine-mc

./: .gitignore  Cargo.toml  build.rs
assets/: dev_0.aseprite  grass_0.aseprite  grass_1.aseprite  grass_2.aseprite
config/: engine.toml
crates/ge-dev-ui/: Cargo.toml
crates/ge-dev-ui/src/: lib.rs  noise.rs
crates/ge-macros/src/: lib.rs  timer.rs  trns.rs
crates/ge-render/: Cargo.toml
crates/ge-render-vk/: Cargo.toml
crates/ge-render-vk/examples/: buffers.rs  compute.rs  graphics.rs  image.rs
crates/ge-render-vk/src/: main.rs
crates/ge-render/examples/: circle_math.rs  config.rs
crates/ge-render/src/: block.rs  context.rs  engine.rs  lib.rs  renderer.rs  stats.rs  text.rs  world.rs
crates/ge-render/src/camera/: controller.rs  mod.rs  uniform.rs
crates/ge-render/src/drawables/: chunk.rs  world.rs
crates/ge-resource/: Cargo.toml
crates/ge-resource/examples/: data.rs  metadata.rs
crates/ge-resource/src/: block.rs  parse.rs  texture.rs
crates/ge-util/src/: circle.rs  config.rs  convert.rs  coords.rs  lerp.rs  lib.rs  macros.rs
crates/ge-world/: Cargo.toml
crates/ge-world/examples/: chunk_gen.rs  world_gen.rs
crates/ge-world/src/: gen.rs  lib.rs  noise.rs  spline.rs
crates/ge-world/src/trns/: mod.rs  surface.rs
data/: dev.ron  dirt.ron  example.ron  grass.ron  stone.ron  water.ron  wood.ron
dev-ui/: Cargo.toml
dev-ui/src/: lib.rs
ge-dev-ui/: Cargo.toml
ge-dev-ui/src/: lib.rs  main.rs  noise.rs
ge-macros/: Cargo.toml
ge-macros/src/: lib.rs
ge-render/: Cargo.toml  build.rs
ge-render/examples/: circle_math.rs
ge-render/src/: block.rs  engine.rs  lib.rs  main.rs  renderer.rs  stats.rs  text.rs  texture.rs  world.rs
ge-render/src/camera/: controller.rs  mod.rs  projection.rs  uniform.rs
ge-render/src/drawables/: block.rs  chunk.rs  world.rs
ge-render/src/shaders/: block.wgsl
ge-resource/: Cargo.toml
ge-resource/examples/: config.rs  load_data.rs  load_texture_array.rs
ge-resource/src/: block.rs  config.rs  data.rs  lib.rs  shader.rs  texture.rs  util.rs
ge-util/: Cargo.toml
ge-util/src/: config.rs  convert.rs  coords.rs  lerp.rs  lib.rs  macros.rs  smooth.rs
ge-world/: Cargo.toml
ge-world/examples/: chunk_gen.rs  noise.rs  perlin_1d.rs  perlin_2d.rs  world_gen.rs
ge-world/src/: gen.rs  lib.rs  noise.rs  sea_level.rs  spline.rs  surface_painting.rs  types.rs  util.rs
ge-world/src/trns/: mod.rs  sea_level.rs  surface.rs
render/: Cargo.toml  build.rs
render/src/: camera.rs  lib.rs
src/: block.rs  camera.rs  engine.rs  lib.rs  main.rs  model.rs  renderer.rs  resources.rs  shader.wgsl  texture.rs
world/: Cargo.toml
world/examples/: perlin_1d.rs  perlin_2d.rs  world_gen.rs
world/src/: gen.rs  lib.rs  main.rs  noise.rs  types.rs  util.rs
