[workspace]
members = [
    "crates/*",
]

[workspace.package]
authors = ["Liam Fenneman"]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
image = { version = "0.24.6", default-features = false, features = ["png"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
nalgebra-glm = "0.18"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
wgpu = { version = "0.16.0", features = ["trace"] }
winit = "0.28.3"
