[package]
name = "ge-render"
authors.workspace = true
edition.workspace = true
version.workspace = true
default-run = "ge-render"

[dependencies]
beul.workspace = true
bytemuck = { version = "1.13", features = [ "derive" ] }
cgmath.workspace = true
ge-resource = { path = "../ge-resource" }
ge-world = { path = "../ge-world" }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
winit.workspace = true

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
