[package]
name = "ge-render"
authors.workspace = true
edition.workspace = true
version.workspace = true
default-run = "ge-render"

[dependencies]
tokio = { version = "1.28", features = [ "full" ] }
bytemuck = { version = "1.13", features = [ "derive" ] }
cgmath.workspace = true
ge-resource = { path = "../ge-resource" }
ge-util = { path = "../ge-util" }
ge-world = { path = "../ge-world" }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
wgpu_glyph = "0.20"
winit.workspace = true

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
