[package]
name = "ge-resource"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
ge-world = { path = "../ge-world" }
image.workspace = true
nom = "7.1"
ron = "0.8"
serde.workspace = true
thiserror = "1.0"
wgpu.workspace = true

[dev-dependencies]
beul = "1.0"
