[package]
name = "ge-resource"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
cgmath.workspace = true
ge-macros = { path = "../ge-macros" }
ge-world = { path = "../ge-world" }
image.workspace = true
nom = "7.1"
ron = "0.8"
serde.workspace = true
thiserror.workspace = true
toml = "0.7"
wgpu.workspace = true

[dev-dependencies]
beul = "1.0"
