[package]
name = "ge-render"
authors.workspace = true
edition.workspace = true
version.workspace = true
default-run = "ge-render"

[dependencies]
beul = "1.0"
bytemuck = { version = "1.13", features = [ "derive" ] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
wgpu = { version = "0.16.0", features = ["trace"] }
winit = "0.28.3"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"
