[package]
name = "ge-render"
authors.workspace = true
edition.workspace = true
version.workspace = true
default-run = "ge-render"

[dependencies]
beul = "1.0"
bytemuck = { version = "1.13", features = [ "derive" ] }
cgmath = "0.18.0"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
wgpu = { version = "0.16.0", features = ["trace"] }
winit = "0.28.3"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
