[package]
name = "ge-render"
authors.workspace = true
edition.workspace = true
version.workspace = true
default-run = "ge-render"

[dependencies]
beul = "1.0"
bytemuck = { version = "1.13", features = [ "derive" ] }
ge-macros = { path = "../ge-macros" }
ge-resource = { path = "../ge-resource" }
ge-util = { path = "../ge-util" }
ge-world = { path = "../ge-world" }
nalgebra-glm.workspace = true
nalgebra.workspace = true
num_cpus = "1.15"
rayon.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
wgpu.workspace = true
wgpu_glyph = "0.20"
winit.workspace = true

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
